--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,14 @@
 	--columns: 5;
 }
 
+body {
+	background-color: black;
+}
+
 .full-size {
 	position: fixed;
 	top: 0; bottom: 0; left: 0; right: 0;
 	overflow: hidden;
-	background-color: black;
 }
 
 .deck {
